--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -52,6 +52,7 @@ body{
     justify-content: center;
     align-items: center;
     color: #93A8AC;
+    margin: 3rem 0;
 
     img {
         height: 500px;
@@ -91,5 +92,194 @@ body{
             color: #CD8B76;
             cursor: pointer;
         }
+    }
+}
+
+// Aqui empieza la parte de contenedor para los Hobbies
+
+.hobbies {
+    display: flex;
+    justify-content: space-evenly;
+    
+
+    // Esto es para la imagen 1 "Music"
+    .music {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        height: 200px;
+        width: 300px;
+        margin: 4rem;
+        border-radius: 5%;
+        border: solid 2px #DBFF76;
+
+        &:hover {
+            border: solid 6px #CD8B76;
+            transition: 0.2s;
+
+            .appear-music {
+                visibility: visible;
+            }
+
+            .main-img {
+                opacity: 0.3;
+                transition: 0.4s;
+            }
+        }
+
+        .main-img {
+            position: absolute;
+            height: 100%;
+            width: 100%; 
+            border-radius: 2%; 
+            z-index: -1;
+            
+        }
+
+        .appear-music {
+            visibility: hidden;
+            display: block;
+            align-items: start;
+
+            .sub-img {
+                position: relative;
+                height: 100px;
+                width: 100px;
+                z-index: 2;
+
+            }
+
+            p {
+                font-family: "Poppins", sans-serif;
+                font-weight: 700;
+                font-style: normal;
+                font-size: 1rem;
+                color: #DBFF76;
+
+            }
+
+        }
+        
+    }
+
+    // Esto es para la imagen 2 "Nature"
+    .nature {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        height: 200px;
+        width: 300px;
+        margin: 4rem;
+        border-radius: 5%;
+        border: solid 2px #DBFF76;
+
+        &:hover {
+            border: solid 6px #CD8B76;
+            transition: 0.2s;
+
+            .appear-nature {
+                visibility: visible;
+            }
+
+            .main-img {
+                opacity: 0.3;
+                transition: 0.4s;
+            }
+        }
+
+        .main-img {
+            position: absolute;
+            height: 100%;
+            width: 100%; 
+            border-radius: 2%; 
+            z-index: -1;
+            
+        }
+
+        .appear-nature {
+            visibility: hidden;
+            display: block;
+            align-items: start;
+
+            .sub-img {
+                position: relative;
+                height: 100px;
+                width: 100px;
+                z-index: 2;
+
+            }
+
+            p {
+                font-family: "Poppins", sans-serif;
+                font-weight: 700;
+                font-style: normal;
+                font-size: 1rem;
+                color: #DBFF76;
+
+            }
+
+        }
+        
+    }
+
+
+    // Esto es para la imagen 3 "Movies"
+    .movies {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        height: 200px;
+        width: 300px;
+        margin: 4rem;
+        border-radius: 5%;
+        border: solid 2px #DBFF76;
+
+        &:hover {
+            border: solid 6px #CD8B76;
+            transition: 0.2s;
+
+            .appear-movies {
+                visibility: visible;
+            }
+
+            .main-img {
+                opacity: 0.3;
+                transition: 0.4s;
+            }
+        }
+
+        .main-img {
+            position: absolute;
+            height: 100%;
+            width: 100%; 
+            border-radius: 2%; 
+            z-index: -1;
+            
+        }
+
+        .appear-movies {
+            visibility: hidden;
+            display: block;
+            align-items: start;
+
+            .sub-img {
+                position: relative;
+                height: 100px;
+                width: 100px;
+                z-index: 2;
+
+            }
+
+            p {
+                font-family: "Poppins", sans-serif;
+                font-weight: 700;
+                font-style: normal;
+                font-size: 1rem;
+                color: #DBFF76;
+
+            }
+
+        }
+        
     }
 }
