--- a/src/css/index.css
+++ b/src/css/index.css
@@ -121,7 +121,7 @@ h2 {
 .hobbies .music .appear-music {
   visibility: hidden;
   display: block;
-  align-items: center;
+  text-align: center;
 }
 .hobbies .music .appear-music .sub-img {
   position: relative;
@@ -167,7 +167,7 @@ h2 {
 .hobbies .nature .appear-nature {
   visibility: hidden;
   display: block;
-  align-items: start;
+  text-align: center;
 }
 .hobbies .nature .appear-nature .sub-img {
   position: relative;
@@ -213,7 +213,7 @@ h2 {
 .hobbies .movies .appear-movies {
   visibility: hidden;
   display: block;
-  align-items: start;
+  text-align: center;
 }
 .hobbies .movies .appear-movies .sub-img {
   position: relative;
@@ -259,7 +259,7 @@ h2 {
 .hobbies .food .appear-food {
   visibility: hidden;
   display: block;
-  align-items: start;
+  text-align: center;
 }
 .hobbies .food .appear-food .sub-img {
   position: relative;
@@ -305,7 +305,7 @@ h2 {
 .hobbies .friends .appear-friends {
   visibility: hidden;
   display: block;
-  align-items: start;
+  text-align: center;
 }
 .hobbies .friends .appear-friends .sub-img {
   position: relative;
@@ -351,7 +351,7 @@ h2 {
 .hobbies .technology .appear-technology {
   visibility: hidden;
   display: block;
-  align-items: start;
+  text-align: center;
 }
 .hobbies .technology .appear-technology .sub-img {
   position: relative;
@@ -365,6 +365,124 @@ h2 {
   font-style: normal;
   font-size: 1rem;
   color: #DBFF76;
+}
+
+.studies-projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "studies projects";
+  color: #93A8AC;
+}
+.studies-projects .studies {
+  grid-area: studies;
+  display: flex;
+  flex-direction: column;
+  padding-left: 8rem;
+  padding-right: 2rem;
+  font-family: "Lato", sans-serif;
+}
+.studies-projects .studies h3 {
+  color: #CD8B76;
+}
+.studies-projects .studies .studies-web-dev {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .studies .studies-web-dev img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .studies .studies-web-dev .studies-text {
+  grid-area: text;
+}
+.studies-projects .studies .studies-web-dev h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .studies .studies-web-dev p {
+  margin: 0;
+}
+.studies-projects .studies .studies-ind-eng {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .studies .studies-ind-eng img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .studies .studies-ind-eng .studies-text {
+  grid-area: text;
+}
+.studies-projects .studies .studies-ind-eng h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .studies .studies-ind-eng p {
+  margin: 0;
+}
+.studies-projects .studies .studies-html {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .studies .studies-html img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .studies .studies-html .html-text {
+  grid-area: text;
+}
+.studies-projects .studies .studies-html h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .studies .studies-html p {
+  margin: 0;
+}
+.studies-projects .studies .studies-css {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .studies .studies-css img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .studies .studies-css .css-text {
+  grid-area: text;
+}
+.studies-projects .studies .studies-css h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .studies .studies-css p {
+  margin: 0;
+}
+.studies-projects .projects {
+  grid-area: projects;
+  display: flex;
+  flex-direction: column;
+  padding-left: 8rem;
+  padding-right: 2rem;
+  font-family: "Lato", sans-serif;
 }
 
 /*# sourceMappingURL=index.css.map */
