--- a/src/css/index.css
+++ b/src/css/index.css
@@ -476,13 +476,177 @@ h2 {
 .studies-projects .studies .studies-css p {
   margin: 0;
 }
+.studies-projects .studies .studies-excel {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .studies .studies-excel img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .studies .studies-excel .excel-text {
+  grid-area: text;
+}
+.studies-projects .studies .studies-excel h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .studies .studies-excel p {
+  margin: 0;
+}
 .studies-projects .projects {
   grid-area: projects;
   display: flex;
   flex-direction: column;
-  padding-left: 8rem;
+  padding-left: 2rem;
   padding-right: 2rem;
   font-family: "Lato", sans-serif;
+}
+.studies-projects .projects h3 {
+  color: #CD8B76;
+}
+.studies-projects .projects .project-payment {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-payment img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-payment .studies-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-payment h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-payment p {
+  margin: 0;
+}
+.studies-projects .projects .project-documental {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-documental img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-documental .documental-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-documental h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-documental p {
+  margin: 0;
+}
+.studies-projects .projects .project-packaging {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-packaging img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-packaging .packaging-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-packaging h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-packaging p {
+  margin: 0;
+}
+.studies-projects .projects .project-ecommerce {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-ecommerce img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-ecommerce .ecommerce-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-ecommerce h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-ecommerce p {
+  margin: 0;
+}
+.studies-projects .projects .project-logistic {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-logistic img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-logistic .logistic-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-logistic h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-logistic p {
+  margin: 0;
+}
+.studies-projects .projects .project-international {
+  display: grid;
+  grid-template-columns: 1fr 7fr;
+  grid-template-areas: "image text";
+  margin: 2rem 0;
+}
+.studies-projects .projects .project-international img {
+  grid-area: image;
+  margin-right: 1rem;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.studies-projects .projects .project-international .international-text {
+  grid-area: text;
+}
+.studies-projects .projects .project-international h3 {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.studies-projects .projects .project-international p {
+  margin: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
