--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -479,6 +479,7 @@ h2 {
     grid-template-areas: 
         "studies projects";
     color: #93A8AC;
+    margin: 4rem auto;
 
     .studies {
         grid-area: studies;
@@ -848,3 +849,33 @@ h2 {
 
     } 
 }
+
+.contact {
+    display: block;
+    text-align: center;
+    padding: 10px 0 20px 0;
+    border-top: solid 2px #DBFF76;
+    background-color: black;
+    
+
+
+        h5 {
+            display: inline-block;
+            margin: 1rem 0;
+            font-family: "Poppins", sans-serif;
+            font-weight: 700;
+            font-style: normal;
+            font-size: 1rem;
+            color: #DBFF76;
+
+        }
+
+        img {
+            height: 2rem;
+            width: 2rem;
+            padding: 0 1rem;
+        }
+}
+
+
+
